--- a/Index.html
+++ b/Index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>My Offline App</title>
+<title>My Gold Master Calcultor</title>
 
 <style>
 body{
