--- a/Index.html
+++ b/Index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>My Gold Master Calcultor</title>
+<title>Gold Master Calculator</title>
 
 <style>
 body{
@@ -10,6 +10,10 @@ body{
     background:#f4f4f4;
     text-align:center;
     padding:20px;
+}
+
+h2 {
+    color: green; /* H2 heading color set to green */
 }
 
 .btn{
@@ -33,13 +37,14 @@ body{
 
 <body>
 
-<h2>My Forms</h2>
+<h2>Gold Master Calculator</h2>
+<br>
 
 <a href="form1.html" class="btn">Sell to Customer</a>
 <a href="form2.html" class="btn">Buy from Customer</a>
 <a href="form3.html" class="btn">Buy from Customer (TMR)</a>
 <a href="form4.html" class="btn">Master Converter</a>
-<a href="form5.html" class="btn">Buy&Cell</a>
+<a href="form5.html" class="btn">Buy&Sell</a>
 
 <!-- NEW BUTTON ADD KARNA HO -->
 <!--
